# pthread

./: CMakeLists.txt  main.cpp  parallel_readdata.h  readdata.h  timer.h
parallel_all_queries/: block_task.cpp  group_parallel.cpp  parallel_finding_key_elements.cpp
parallel_each_query/: early_stop.cpp  parallel_intersection.cpp
serial/: max_successor.cpp  sequential.cpp  simplified_Adp.cpp
